Addd title about punta cana discovery

--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -1,13 +1,14 @@
 {% extends 'excursions/excursions_base.html' %}
 {% block title %}punta cana excursions {% endblock %}
-{% block description %}Embark on an extraordinary journey with Punta Cana excursions. In 2023, Punta Cana offers a diverse range of experiences, from exploring pristine beaches to immersing yourself in vibrant marine life and discovering cultural gems. Whether you're seeking the best Punta Cana excursions for your family vacation, yearning for Saona Island tours, or simply eager to explore Bavaro's beauty, there's something for everyone. With options ranging from VIP experiences to budget-friendly choices, our Punta Cana excursions cater to every traveler's preferences. Come and discover the Dominican Republic's breathtaking landscapes and unforgettable adventures with us.{% endblock %}
+{% block description %}Punta Cana Discovery is a premier tour operator based in Punta Cana, Dominican Republic, offering a wide range of exciting and memorable excursions and activities for tourists visiting the area.
+{% endblock %}
 {% load static %}
 
 {% block content %}
 
 <section>
 
-    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable Excursions in Punta Cana</h1>
+    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable Excursions in Punta Cana with Punta Cana Discovery </h1>
 
     
     <section>
