Add base url and canonical

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -12,7 +12,8 @@
         content="punta cana, Discovery, adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://www.puntacana-explore.com/excursions/">
+    <link rel="canonical" href="https://www.puntacanadiscovery.com/excursions/">
+    <base href="https://www.puntacanadiscovery.com/">
     <meta name="robots" content="index, follow">
     <!-- <title>Punta cana Explore</title> -->
     <title>{% block title %}Punta Cana Discovery {% endblock %}</title>
