--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://www.puntacanadiscovery.com/excursions/">
-    <base href="https://www.puntacanadiscovery.com/">
+    <!-- <base href="https://www.puntacanadiscovery.com/"> -->
     <meta name="robots" content="index, follow">
     <!-- <title>Punta cana Explore</title> -->
     <title>{% block title %}Punta Cana Discovery {% endblock %}</title>
@@ -38,7 +38,6 @@
   
    <!-- stripe -->
 <script src="https://js.stripe.com/v3/"></script>
-<script src="{% static 'js/checkout.js' %}" defer></script>
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
   <!-- translation -->
 
