Get 100 % from seo in google

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -175,7 +175,7 @@
 <!-- floating whatsapp code -->
 <div class="whatsap-container draggable" id="draggableElement">
     <a aria-label="Whatsapp" rel="noopener" rel="whatsapp" href="https://api.whatsapp.com/send?phone=18094614942"
-        target="_blank"><img id="whatsapp-floating" class="text-center"
+        target="_blank" alt="whatsapp link"><img alt="images link for whatsapp" id="whatsapp-floating" class="text-center"
             src="{% static 'images/excursions/whatsapp.png'%}"></a>
 </div>
 
