Add better improve best practice

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -120,7 +120,7 @@
     <img id="hero-image" src="{% static 'images/excursions/hero-img-puj.jpg' %}" alt="Hero Image">
 
     <!-- titles -->
-    <div id="title_hero">Memorable Adventures Await: Unforgettable Excursion Experiences</div>
+    <div id="title_hero">Memorable Adventures Await: Unforgettable Experiences</div>
 
     <!-- Add more square links as needed -->
     <div class="square-btn"><span class="main-link underline-btn"><a href="{% url 'excursions' %}">Excursions</a></span>
