--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -42,6 +42,7 @@ a{
 .icon i{
     color:white;
 }
+
 /*------------------------------------------------------------------------ dispaly 
 
 
@@ -1538,7 +1539,7 @@ left:450px;
 
 #hero-image {
     width: 100%;
-    height: 500px;
+    height: 312px;
     opacity: 0.5;
     background-color: #5092cb;
 }
@@ -1546,9 +1547,9 @@ left:450px;
 #title_hero{
     position: absolute;
     width:60%;
-    top: 40%;
+    top: 60%;
     left: 50px;
-    font-size: 3em;
+    font-size: 30px;
     font-weight: bolder;
 }
 
@@ -1905,7 +1906,7 @@ iframe {
     /* main look site */
     #title_hero{
         width:60%;
-        top: 40%;
+        top: 50%;
         font-size: 30px;
 
     }
@@ -2023,7 +2024,7 @@ iframe {
     /* -----------------------------------------------------main mobile search  */
     #title_hero{
         width:80%;
-        top: 40%;
+        top: 50%;
         font-size: 30px;
 
     }
