--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -8,7 +8,7 @@
 
 <section>
 
-    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable Excursions in Punta Cana with Punta Cana Discovery </h1>
+    <h1 class="text-center mt-5 h1-title">Embark on Unforgettable experience with Punta Cana Discovery </h1>
     
     <section>
         <div class="card-container mt-5">
