--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -148,7 +148,7 @@
 
     <div id="other-icons">
         <div class="shoping-cart-container">
-            <a href="{% url 'checkout' %}" style="color:white">
+            <a href="{% url 'checkout' %}" style="color:white" aria-label="cart items">
                 <div class="icon">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
@@ -159,7 +159,7 @@
         </div>
 
         <div class="dropdown-user" data-toggle="modal" data-target="#myModal">
-            <button class="dropdown-item icon"><i class="fa-solid fa-user"></i>
+            <button aria-label="user Icon" class="dropdown-item icon"><i class="fa-solid fa-user"></i>
             </button>
         </div>
     </div>
