--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,7 +149,7 @@ margin: auto;
     position: relative;
     display: inline-block;
     text-decoration: none;
-    color: white;
+    color: var(--black);
     font-size: 18px;
     transition: color 0.3s ease-in-out;
   }
@@ -1421,7 +1421,7 @@ textarea::placeholder {
     right: 10px;
     font-size: 24px;
     cursor: pointer;
-    color: #333;
+    color: var(--black);
   }
   
   /* Style for the form labels */
@@ -1447,7 +1447,7 @@ textarea::placeholder {
   /* Style for the submit button */
   .task-model button[type="submit"] {
     background-color: #4CAF50;
-    color: white;
+    color: var(--black);
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -1530,7 +1530,7 @@ left:450px;
 
   .group-button:hover {
     background-color: var(--Yellow);
-    color: #ffffff;
+    color: var(--black);
   }
 #hero-section {
     position: relative;
@@ -1594,7 +1594,7 @@ left:450px;
     width: 20%;
     padding: 10px;
     background-color: #FBB900;
-    color: #fff;
+    color: var(--gun-metal);
     border-radius: 20px;
     cursor: pointer;
     font-size: 1em;
