--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1521,7 +1521,7 @@ left:450px;
     text-decoration: none;
     cursor: pointer;
     border: 1px solid var(--Yellow);
-    color: var(--Yellow);
+    color: var(--black);
     background-color: #ffffff;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
