fix not desending order from heading h5

--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -32,7 +32,7 @@
               <i class="fa-solid fa-van-shuttle"></i> Transportation</span>
               {% endif %}
              </div>
-                <h5 class="card-title">{{excursion.title|slice:":30"|title}}..</h5>
+                <div class="card-title">{{excursion.title|slice:":30"|title}}..</div>
                 <!-- Reviews -->
                 <div class="card-star">
                     <i class="fa-star fa-solid"></i>
