--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -66,7 +66,7 @@
                         {% if excursions.is_transfer %}
                         <!-- date -->
                         <div class="form-group mt-3">
-                            <label for="date">Select Date</label>
+                            <label aria-label="Select Date" for="date">Select Date</label>
                             <input type="text" class="form-control" id="date" name="excursion_date" min="{{tomorrow_str}}"
                             value="Select Date"
                                 required>
@@ -193,7 +193,7 @@
 
 
     </div>
-    <h1 class="text-center mt-5">Overview</h1>
+    <div class="text-center mt-5 bold">Overview</div>
     <div class="overview">
         {{excursions.description|safe}}
         <!-- Add a draggable element -->
@@ -201,7 +201,7 @@
             <p clas="text-center mt-5">To cancel your booking, please send a WhatsApp message to our support team at 👇
                 In your message, include the text "cancel" along with your booking number.</p>
             <a aria-label="Whatsapp" rel="noopener" rel="whatsapp"
-                href="https://api.whatsapp.com/send?phone=18094614942" target="_blank"><img id="whatsapp-floating"
+                href="https://api.whatsapp.com/send?phone=18094614942" target="_blank"><img alt="image link for whatsapp" id="whatsapp-floating"
                     class="text-center" src="{% static 'images/excursions/whatsapp.png'%}">
                 Connect via WhatsApp</a>
         </div>
@@ -209,7 +209,7 @@
 
 
     <!-- Reviews -->
-    <h5 class="review-title">Customer reviews: {{excursions.reviews.all.count}}</h5>
+    <h4 class="review-title">Customer reviews: {{excursions.reviews.all.count}}</h4>
     <hr>
 
 
