add title for punta cana discovery

--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -1,5 +1,5 @@
 {% extends 'excursions/excursions_base.html' %}
-{% block title %}punta cana excursions {% endblock %}
+{% block title %}Punta Cana Discovery {% endblock %}
 {% block description %}Punta Cana Discovery is a premier tour operator based in Punta Cana, Dominican Republic, offering a wide range of exciting and memorable excursions and activities for tourists visiting the area.
 {% endblock %}
 {% load static %}
