Started the work for home

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,113 +1,6 @@
-{% extends 'excursions/excursions_base.html' %}
-<title>{% block title %}unique things to do in punta cana{% endblock %}</title>
+{% extends 'home/base.html' %}
+<title>{% block title %} Unique things to do in punta cana with punta cana discovery {% endblock %}</title>
 {% load static %}
-
 {% block content %}
 
-<section class="home-banner">
-    <!-- slide show images -->
-    <div class="slide">
-        <img src="{% static '/images/hero-images/boat-escursion.jpg' %}" alt="boat-escursion image">
-    </div>
-    <div class="slide">
-        <img src="{% static '/images/hero-images/macao-beach.jpg' %}" alt="macao-beach image">
-    </div>
-    <div class="slide">
-        <img src=" {% static '/images/hero-images/parashut.jpg' %}" alt="parashut image">
-    </div>
-
-    <div class="slide">
-        <img src="{% static '/images/hero-images/puntacana-beach.jpg' %}" alt="puntacana-beach image">
-    </div>
-
-    <div class="slide">
-        <img src="{% static '/images/hero-images/speed-boat.jpg' %}" alt="speed-boat image">
-    </div>
-
-    <!-- Typing effects -->
-    <div>
-        <h3 class="heading  w3-container w3-cursive"> Welcome to Dominican Republic ! </h3>
-        <h3 class="heading w3-container w3-cursive"> Yara Beach rooms and excursions! </h3>
-        <h3 class="heading w3-container w3-cursive"> Book a stay with free cancellation! </h3>
-        <h3 class="heading w3-container w3-cursive"> Special Rentals plus excursions ! </h3>
-        <h3 class="heading w3-container w3-cursive"> Book excursions and stays with us! </h3>
-    </div>
-</section>
-
-<!-- excursions sections -->
-<section>
-    <div class="section-title">
-        <h3>Excursions</h3>
-        <div class="my-btn">
-            <a class="btn my_hover user_button_sm" href="{% url 'excursions' %}">See all escursions >></a>
-        </div>
-    </div>
-    <div class="card-container">
-        {% for excursion in excursions %}
-        <div class="card-wrapper">
-            <a href="{% url 'excursion_detail' excursion.pk %}"><img src="{{excursion.main_image.url}}"
-                    alt="{{excursion.image_name}}"> </a>
-            <h5 class="card-title">{{excursion.title|slice:":30"|title}}..</h5>
-            <!-- Reviews -->
-            <div class="card-star">
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                {% if excursion.reviews.count > 1 or excursion.reviews.count == 0 %}
-                <span> {{excursion.reviews.count}} reviews</span>
-                {% else %}
-                <span> {{excursion.reviews.count}} review</span>
-                {% endif%}
-            </div>
-
-            <div class="price">
-                ${{excursion.Price}}
-            </div>
-        </div>
-
-        {% endfor%}
-    </div>
-</section>
-
-<!-- rental sections -->
-<section>
-    <div class="section-title">
-        <h3> Stays </h3>
-        <div class="my-btn">
-            <a class="btn my_hover user_button_sm" href="{% url 'rentals' %}">See all stays >></a>
-        </div>
-    </div>
-
-    <div class="card-container">
-        {% for rental in rentals %}
-        <div class="card-wrapper">
-            <a href="{% url 'rental_detail' rental.pk %}"><img src="{{rental.main_image.url}}"
-                    alt="{{rental.image_name}}"> </a>
-            <h5 class="card-title">{{rental.title|slice:":30"|title}}..</h5>
-            <span
-                class="ACCOM_type {% if rental.ACCOM_type == 'Room' %} green {% elif rental.ACCOM_type == 'Apartment' %} blue {% else %} red {% endif %}">{{rental.ACCOM_type}}</span>
-            <!-- Reviews -->
-            <div class="card-star">
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                <i class="fa-star fa-solid"></i>
-                {% if rental.reviews.count > 1 or rental.reviews.count == 0 %}
-                <span> {{rental.reviews.count}} reviews</span>
-                {% else %}
-                <span> {{rental.reviews.count}} review</span>
-                {% endif%}
-            </div>
-
-            <div class="price">
-                ${{rental.Price}}
-            </div>
-        </div>
-
-        {% endfor%}
-    </div>
-</section>
 {% endblock content %}
