--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -108,16 +108,25 @@
 }
 
 </style> -->
-<div id="google_translate_element"></div>
-<!---------------------------------------------------- google translate btn -->
-<div id="hero-section">
-    <div class="overlay"> </div>
+
+<div id="pd-header-container">
+    <div id="google_translate_element"></div>
+    <!-- <ul class="pd-navbar">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul> -->
     <!-- logo -->
     <a href="{% url 'home'%}" id="logo-link" target="_blank">
         <img id="logo-site" class="palm-tree" src="{% static 'images/excursions/Logo.png' %}" alt="Logo">
     </a>
+</div>
+<!---------------------------------------------------- google translate btn -->
+<div id="hero-section">
+    <div class="overlay"> </div>
     <!-- hero img -->
-    <img id="hero-image" src="{% static 'images/excursions/hero-img-puj.jpg' %}" alt="Hero Image">
+    <img id="hero-image" src="{% static 'images/excursions/pd-hero-img.webp' %}" alt="Hero Image">
 
     <!-- titles -->
     <div id="title_hero">Memorable Adventures Await: Unforgettable Experiences</div>
