--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,6 +1,7 @@
-{% extends 'home/base.html' %}
+{% extends 'base2.html' %}
 <title>{% block title %} Unique things to do in punta cana with punta cana discovery {% endblock %}</title>
 {% load static %}
 {% block content %}
+
 
 {% endblock content %}
