--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/faq.css' %}" rel="stylesheet" type="text/css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8D597NVLB">
 </script>
