--- a/static/css/base2.css
+++ b/static/css/base2.css
@@ -52,27 +52,12 @@ body {
     color: #002e5d; /* Change color as per your requirement */
 }
 
-.mobile-menu {
-    display: none; /* Hide by default */
-    position: absolute;
-    background-color: white;
-    top: 60px; /* Adjust as needed */
-    right: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-.mobile-menu li {
-    padding: 10px 20px;
-}
-
-.mobile-menu li a {
-    text-decoration: none;
-    color: #002e5d; /* Change color as per your requirement */
-}
-
 @media (max-width: 768px) {
+    .mobile-menu{
+        display: none;
+    }
     .logo-desktop img {
-        display: None;
+        display: none;
     }
     .logo-mobile img {
         width: 200px !important;
@@ -90,4 +75,109 @@ body {
     .shooping-cart{
         margin: auto;
     }
+
+    .mobile-menu {
+        display:none;
+        position: fixed;
+        background-color: orange;;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        z-index: 999;
+    }
+    
+
+
+    /* Container for the menu */
+    .menu-container {
+        background-color: white;
+        padding: 20px;
+        width: 300px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        position: relative;
+        margin: 50px auto;
+    }
+    
+    /* Close button styles */
+    .close-btn {
+        background: none;
+        border: none;
+        font-size: 24px;
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        color:black;
+        z-index: 500;
+    }
+    
+    /* Cart container styles */
+    .cart-container {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        position: relative;
+    }
+    
+    .cart-icon {
+        width: 30px;
+        height: 30px;
+    }
+    
+    .cart-badge {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        background-color: red;
+        color: white;
+        border-radius: 50%;
+        padding: 2px 6px;
+        font-size: 12px;
+    }
+    
+    /* Menu item styles */
+    .menu-items {
+        list-style: none;
+        padding: 0;
+        margin-top: 20px;
+    }
+    
+    .menu-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 15px;
+        background-color: #f4f4f4;
+        border-radius: 8px;
+        margin-bottom: 10px;
+        cursor: pointer;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    
+    .menu-item:hover {
+        background-color: #e2e2e2;
+    }
+    
+    .menu-image {
+        border-radius: 8px;
+        width: 50px;
+        height: 50px;
+    }
+    
+    .menu-item span {
+        flex: 1;
+        margin-left: 10px;
+    }
+    
+    .arrow {
+        font-size: 24px;
+        color: #333;
+    }
+    
+    
 }
