--- a/templates/base2.html
+++ b/templates/base2.html
@@ -1,16 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    {% load static %}
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome -->
-     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
 
     <link href="{% static 'css/base2.css' %}" rel="stylesheet" type="text/css">
     <title>Header Navigation</title>
 </head>
+
 <body>
     <header>
         <div class="desktop-container-nav">
@@ -24,7 +25,7 @@
                     <li><a href="#">Destinations</a></li>
                     <li><a href="#">Meetings and Events</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li class="fa-solid fa-phone" ><a href="tel:+529988819507"> +1 849-428-0723</a></li>
+                    <li class="fa-solid fa-phone"><a href="tel:+529988819507"> +1 849-428-0723</a></li>
                 </ul>
             </nav>
 
@@ -33,10 +34,11 @@
             <div class="menu-icon" onclick="toggleMenu()">
                 &#9776; <!-- Hamburger Icon -->
             </div>
-    
+
 
             <div class="logo-mobile">
-                <img src="{% static 'images/excursions/Logo.png' %}" alt="Punta Cana Discovery Logo"> <!-- Add your logo here -->
+                <img src="{% static 'images/excursions/Logo.png' %}" alt="Punta Cana Discovery Logo">
+                <!-- Add your logo here -->
             </div>
 
 
@@ -44,21 +46,46 @@
                 <a href="#" class="cart">🛒</a>
             </div>
 
-            <ul class="mobile-menu">
-                <li><a href="#">Excursions</a></li>
-                <li><a href="#">Airport Transfers</a></li>
-                <li><a href="#">Destinations</a></li>
-                <li><a href="#">Meetings and Events</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li class="fa-solid fa-phone" ><a href="tel:+529988819507"> +1 849-428-0723</a></li>
-            </ul>
+            <div class="mobile-menu">
+                <div class="menu-container">
+                    <!-- Close button -->
+                    <button class="close-btn" onclick="toggleMenu()">&#10005;</button>
+
+                    <!-- Cart with item count -->
+                    <div class="cart-container">
+                        🛒
+                        <div class="cart-badge">5</div>
+                    </div>
+
+                    <!-- Menu items -->
+                    <ul class="menu-items">
+                        <li class="menu-item">
+                            <img src="https://via.placeholder.com/50" alt="Top activities" class="menu-image">
+                            <span>Top activities</span>
+                            <span class="arrow">&#8250;</span>
+                        </li>
+                        <li class="menu-item">
+                            <img src="https://via.placeholder.com/50" alt="Top landmarks" class="menu-image">
+                            <span>Top landmarks</span>
+                            <span class="arrow">&#8250;</span>
+                        </li>
+                        <li class="menu-item">
+                            <img src="https://via.placeholder.com/50" alt="Explore the world" class="menu-image">
+                            <span>Explore the world</span>
+                            <span class="arrow">&#8250;</span>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
         </nav>
     </header>
     {% block content %}
     <!-- Main Content -->
-   {% endblock %}
-</main>
+    {% endblock %}
+    </main>
 
-<script src="{% static 'js/base2.js' %}"></script>
+    <script src="{% static 'js/base2.js' %}"></script>
 </body>
+
 </html>
