--- a/templates/base2.html
+++ b/templates/base2.html
@@ -3,29 +3,77 @@
 {% load static %}
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Metas -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description"
+        content="{% block description %}Explore and discover the best 2023 Punta Cana excursions for family adventures, including Saona Island tours and unique activities in Punta Cana Bavaro. Discover excursiones en Republica Dominicana, delve into the Caribbean's treasures, and find excursiones near you. Contact excursiones VIP Punta Cana for affordable, child-friendly options, and explore the diverse excursiones Punta Cana has to offer, all at great prices. Don't miss the top Punta Cana tours and tourist attractions with trusted tour companies.{% endblock %}">
+    <meta name="keywords"
+        content="punta cana, Discovery, adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
+    <meta name="author" content="Gerson De La Cruz">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="https://www.puntacana-explore.com/excursions/">
+    <meta name="robots" content="index, follow">
+    <!-- Bootstrap 5.0.2-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- jquery -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8D597NVLB">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z8D597NVLB');
+    </script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
-
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/favicon/android-chrome-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon/android-chrome-512x512.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
+    <!-- site style -->
     <link href="{% static 'css/base2.css' %}" rel="stylesheet" type="text/css">
-    <title>Header Navigation</title>
+    <title>{% block title %}Punta Cana Discovery {% endblock %}</title>
 </head>
 
 <body>
     <header>
         <div class="desktop-container-nav">
+
             <div class="logo-desktop">
-                <img src="{% static 'images/Logo.png' %}" alt="Punta Cana Discovery Logo"> <!-- Add your logo here -->
+                <a class="navbar-brand" href="{% url 'excursions' %}"><img
+                        src="{% static 'images/excursions/Logo.png' %}" alt="Punta Cana Discovery Logo"></a>
             </div>
             <nav class="desktop-nav">
                 <ul>
-                    <li><a href="#">Excursions</a></li>
-                    <li><a href="#">Airport Transfers</a></li>
-                    <li><a href="#">Destinations</a></li>
-                    <li><a href="#">Meetings and Events</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li class="fa-solid fa-phone"><a href="tel:+529988819507"> +1 849-428-0723</a></li>
+
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'excursions' %}"> 👤<a
+                                href="{% url 'excursions' %}"> Hi {{user|title}} </a></a></li>
+                    {% else %}
+                    <li><a href="{% url 'excursions' %}"> 👤 <a
+                                href="{% url 'account_login' %}"> Sign in </a></a></li>
+                    {% endif %}
+                    <li><a href="{% url 'excursions' %}">Excursions</a></li>
+                    <li><a href="#">Transfers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#"> Events</a></li>
+                    <li><a href="#"> 🛒 {% if total %}
+                            ${{total | floatformat:2}}
+                            {% else %}
+                            $0
+                            {% endif %}</a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=447541147634"><img id="whatsapp-floating"
+                                class="text-center" src="{% static 'images/excursions/whatsapp.png'%}"></a></li>
                 </ul>
             </nav>
 
@@ -43,8 +91,13 @@
 
 
             <div class="shooping-cart">
-                <a href="#" class="cart">🛒</a>
-            </div>
+                🛒
+                 {% if total %}
+                        ${{total | floatformat:2}}
+                        {% else %}
+                        $0
+                        {% endif %}
+             </div>
 
             <div class="mobile-menu">
                 <div class="menu-container">
@@ -54,24 +107,45 @@
                     <!-- Cart with item count -->
                     <div class="cart-container">
                         🛒
-                        <div class="cart-badge">5</div>
+                            {% if total %}
+                                ${{total | floatformat:2}}
+                                {% else %}
+                                $0
+                                {% endif %}
                     </div>
 
                     <!-- Menu items -->
                     <ul class="menu-items">
                         <li class="menu-item">
-                            <img src="https://via.placeholder.com/50" alt="Top activities" class="menu-image">
-                            <span>Top activities</span>
+                            <img src="{% static '/images/mobile-img/sahona.jpeg' %}" alt="Top activities" class="menu-image">
+                        
+                            <span> <a href="{% url 'excursions' %}"> Excursions</a></span>
                             <span class="arrow">&#8250;</span>
                         </li>
                         <li class="menu-item">
-                            <img src="https://via.placeholder.com/50" alt="Top landmarks" class="menu-image">
-                            <span>Top landmarks</span>
+                            <img src="{% static '/images/mobile-img/transfer-img.png' %}" alt="Top activities" class="menu-image">
+                            <span> <a href="{% url 'excursions' %}"> Transfer</a></span>
                             <span class="arrow">&#8250;</span>
                         </li>
                         <li class="menu-item">
-                            <img src="https://via.placeholder.com/50" alt="Explore the world" class="menu-image">
-                            <span>Explore the world</span>
+                            <img src="{% static '/images/mobile-img/blog.jpg' %}" alt="Top activities" class="menu-image">
+                            <span>Blog</span>
+                            <span class="arrow">&#8250;</span>
+                        </li>
+                        <li class="menu-item">
+                            <img src="{% static '/images/mobile-img/event.jpg' %}" alt="Top activities" class="menu-image">
+                            <span>Events</span>
+                            <span class="arrow">&#8250;</span>
+                        </li>
+                        <li class="menu-item">
+                            <img src="{% static 'images/excursions/whatsapp.png'%}" alt="Explore the world" class="menu-image">
+                            <span>
+                                <div class="whatsap-container draggable" id="draggableElement">
+                                    <a aria-label="Whatsapp" rel="noopener" rel="whatsapp"
+                                        href="https://api.whatsapp.com/send?phone=447541147634" target="_blank">Contact
+                                    </a>
+                                </div>
+                            </span>
                             <span class="arrow">&#8250;</span>
                         </li>
                     </ul>
