--- a/static/css/base2.css
+++ b/static/css/base2.css
@@ -1,8 +1,16 @@
 /* Body and general styling */
-body {
+* {
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+}
+
 
 #whatsapp-floating {
     width: 50px;
