--- a/templates/base2.html
+++ b/templates/base2.html
@@ -65,6 +65,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
     <!-- site style -->
     <link href="{% static 'css/base2.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/header.css' %}" rel="stylesheet" type="text/css">
     <title>{% block title %}Best Punta Cana Excursions & Tours for 2024 | Punta Cana Discovery{% endblock %}</title>
 </head>
 
